[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-utility-tool"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A highly efficient utility tool for Windows-based workflows"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["utility", "automation", "productivity"]
dependencies = [
    "requests",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/[ユーザー名]/my-utility-tool"
Issues = "https://github.com/[ユーザー名]/my-utility-tool/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]