[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-utility-tool"
version = "0.1.0"
authors = [
  { name="chronos2015", email="tnomura217@gmail.com" },
]
description = "A highly efficient utility tool for Windows-based workflows"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["utility", "automation", "productivity"]
dependencies = [
    "requests",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/chronos2015/my-utility-tool"
Issues = "https://github.com/chronos2015/my-utility-tool/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]